objects/User.object
<CustomObject>
    <fields>
        <fullName>Agree_To_Rules_of_Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree To Rules of Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Contact__c</fullName>
        <formula>HYPERLINK( '/'+Contact_ID__c, FirstName&amp;" "&amp;LastName, "_Self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status_Desc__c</fullName>
        <label>Bargain Unit Status Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargain_Unit_Status__c</fullName>
        <label>Bargain Unit Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Timezone_Offset__c</fullName>
        <formula>(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 00:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 01:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 02:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 03:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 04:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 05:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 06:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 07:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 08:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 09:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 10:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 11:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 12:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 13:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 14:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 15:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 16:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 17:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 18:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 19:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 20:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 21:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 22:00:00")) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+" 23:00:00")) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Timezone Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_Timezone_Text__c</fullName>
        <formula>IF(
   /* Eastern */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -4
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c  = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -5
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Eastern time zone.'
,IF(
   /* Central */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -5
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -6
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Central time zone.'
,IF(
   /* Mountain */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -6
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -7
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Mountain time zone.'
,IF(
   /* Pacific */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -7
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -8
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Pacific time zone.'
,IF(
   /* Alaska */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -8
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -9
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Alaska time zone.'
,IF(
   /* Hawaii-Aleutian */
   OR(
      AND(
         $User.Current_User_Timezone_Offset__c = -9
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = true
      ),
      AND(
         $User.Current_User_Timezone_Offset__c = -10
         , $CustomMetadata.Utility_Setting__mdt.Form_Time_Zone_DST_Utility.Is_DST_Active_in_US__c = false
      )
   )
   , 'All times displayed / entered are Hawaii-Aleutian time zone.'

/* Default display the offset if non-matching US time zone */
, 'All times displayed are UTC offset: '+TEXT($User.Current_User_Timezone_Offset__c)+' hours' ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Timezone Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Official__c</fullName>
        <description>Deprecated. Use the Contact's Funding Official instead.</description>
        <inlineHelpText>Deprecated. Use the Contact's Funding Official instead.</inlineHelpText>
        <label>(Deprecated) Funding Official</label>
        <relationshipName>Funding_Official</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org__c</fullName>
        <label>HR Org</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_ID__c</fullName>
        <externalId>true</externalId>
        <label>LAN ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Banner_Date__c</fullName>
        <description>Last time the user agreed to the banner</description>
        <label>Last Banner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occ_Series__c</fullName>
        <label>Occupational Series</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PASTA_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>PASTA Person ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ORD-111 BAP form</description>
        <label>QA Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPV_CODE_DESCR__c</fullName>
        <label>Supervisor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Environment__c</fullName>
        <label>Session Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_IP__c</fullName>
        <label>Session IP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Timestamp__c</fullName>
        <label>Session Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Token__c</fullName>
        <label>Session Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_2__c</fullName>
        <description>Deprecated.  Use the Contact's Approving Supervisor 2 instead.</description>
        <inlineHelpText>Deprecated.  Use the Contact's Approving Supervisor 2 instead.</inlineHelpText>
        <label>(Deprecated) Approving Supervisor 2</label>
        <relationshipName>Supervisor_2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Deprecated.  Use the Contact's Approving Supervisor instead.</description>
        <inlineHelpText>Deprecated.  Use the Contact's Approving Supervisor instead.</inlineHelpText>
        <label>(Deprecated) Approving Supervisor</label>
        <relationshipName>Supervisor</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Supervisors__c</fullName>
        <description>A list of the user's supervisor(s) from FPPS. Read-only. Maintained by PASTA ETL.</description>
        <label>FPPS Supervisors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supv_Code_Descr_Of_Record__c</fullName>
        <description>DETAIL OF AN EMPLOYEE</description>
        <label>Supervisor Type of Record</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TQB_Role__c</fullName>
        <formula>Text(Contact.TQB_Role__c)</formula>
        <label>TQB Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Keeper__c</fullName>
        <description>Deprecated. Use the Contact's Time Keeper instead.</description>
        <inlineHelpText>Deprecated. Use the Contact's Time Keeper instead.</inlineHelpText>
        <label>(Deprecated) Time Keeper</label>
        <relationshipName>Time_Keeper</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Training_Officer__c</fullName>
        <description>Used for WebForms approval process</description>
        <inlineHelpText>Used for WebForms approval process</inlineHelpText>
        <label>Training Officer</label>
        <relationshipName>Training_Officer</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Users_with_IDs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>PASTA_Person_ID__c</columns>
        <columns>LAN_ID__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>choy, connie</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <validationRules>
        <fullName>EPA_Starter_Cannot_Edit_Another_User</fullName>
        <active>true</active>
        <description>Prevents any user from the "EPA Starter" Profile for editing the User record of another User, but still allows editing of their own User record. 5/25 - excluded Susan Lei and Scott Philbrick, 4/4/19-add Michael Blake, so they can activate users.</description>
        <errorConditionFormula>AND (
    NOT(
       OR (
           $User.Id='005t0000000kHJq',
           $User.Id='005t0000000kGPJ',
           $User.Id='005t0000000kHAL'  
          )
       ),
    $User.ProfileId = '00et0000000QI5m', Id &lt;&gt; $User.Id
    )</errorConditionFormula>
        <errorMessage>You are not allowed to edit another user's record or information because you have the "EPA Starter" profile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Editable_User_Fields</fullName>
        <active>true</active>
        <description>Not allowing the User to change the ETL managed fields</description>
        <errorConditionFormula>AND(
OR( ISCHANGED(  LastName ),
    ISCHANGED(  FirstName ),
    ISCHANGED(   CompanyName ),
	ISCHANGED(  Department ),
	ISCHANGED(  Title ),
	ISCHANGED(  Street ),
	ISCHANGED(  City ),
	ISCHANGED(  State ),
	ISCHANGED(  PostalCode ),
	ISCHANGED( Phone ),	
    ISCHANGED(  Alias ),
    ISCHANGED(   EmployeeNumber ),
	ISCHANGED(  FederationIdentifier ),
	ISCHANGED(  LAN_ID__c ),
	ISCHANGED(  Preferred_Name__c ),	
    ISCHANGED(  Building__c ),
	ISCHANGED(  Mail_Stop__c ),
    ISCHANGED(   HR_Org__c ),
	ISCHANGED(  Person_Type__c ),
	ISCHANGED(  PASTA_Person_ID__c ),
	ISCHANGED(  Grade__c ),	
    ISCHANGED(  Occ_Series__c ),	
    ISCHANGED(  Pay_Plan__c ),
	ISCHANGED(  Position_Title__c ),
    ISCHANGED(   Step__c ),
	ISCHANGED(  Room__c ),
	ISCHANGED(  Bargain_Unit_Status__c ),
	ISCHANGED(  Bargain_Unit_Status_Desc__c )
),
$Profile.Name != "System Administrator",
$Profile.Name != "Standard User" 
)</errorConditionFormula>
        <errorMessage>To get the information updated, contact both WAM_Support@epa.gov and the US EPA Enterprise Service Desk (866-411-4EPA, option 3; or EISD@epa.gov)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Editable_User_Username</fullName>
        <active>true</active>
        <description>Not allowing the User to change the Username field.</description>
        <errorConditionFormula>AND(
ISCHANGED(  Username ),
$Profile.Name != "System Administrator",
$Profile.Name != "Standard User"
)</errorConditionFormula>
        <errorDisplayField>Username</errorDisplayField>
        <errorMessage>This is a system managed field and cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>